; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_path.c_next_hfs_char.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_path.c_next_hfs_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, i64*)* @next_hfs_char to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @next_hfs_char(i8** %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8** %0, i8*** %4, align 8
  store i64* %1, i64** %5, align 8
  br label %8

8:                                                ; preds = %35, %2
  %9 = load i64*, i64** %5, align 8
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %39

12:                                               ; preds = %8
  %13 = load i8**, i8*** %4, align 8
  %14 = load i8*, i8** %13, align 8
  %15 = bitcast i8* %14 to i32*
  %16 = load i64*, i64** %5, align 8
  %17 = load i64, i64* %16, align 8
  %18 = trunc i64 %17 to i32
  %19 = call i32 @git__utf8_iterate(i32* %15, i32 %18, i32* %6)
  store i32 %19, i32* %7, align 4
  %20 = load i32, i32* %7, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %12
  store i32 -1, i32* %3, align 4
  br label %40

23:                                               ; preds = %12
  %24 = load i32, i32* %7, align 4
  %25 = load i8**, i8*** %4, align 8
  %26 = load i8*, i8** %25, align 8
  %27 = sext i32 %24 to i64
  %28 = getelementptr inbounds i8, i8* %26, i64 %27
  store i8* %28, i8** %25, align 8
  %29 = load i32, i32* %7, align 4
  %30 = sext i32 %29 to i64
  %31 = load i64*, i64** %5, align 8
  %32 = load i64, i64* %31, align 8
  %33 = sub i64 %32, %30
  store i64 %33, i64* %31, align 8
  %34 = load i32, i32* %6, align 4
  switch i32 %34, label %36 [
    i32 8204, label %35
    i32 8205, label %35
    i32 8206, label %35
    i32 8207, label %35
    i32 8234, label %35
    i32 8235, label %35
    i32 8236, label %35
    i32 8237, label %35
    i32 8238, label %35
    i32 8298, label %35
    i32 8299, label %35
    i32 8300, label %35
    i32 8301, label %35
    i32 8302, label %35
    i32 8303, label %35
    i32 65279, label %35
  ]

35:                                               ; preds = %23, %23, %23, %23, %23, %23, %23, %23, %23, %23, %23, %23, %23, %23, %23, %23
  br label %8

36:                                               ; preds = %23
  %37 = load i32, i32* %6, align 4
  %38 = call i32 @git__tolower(i32 %37)
  store i32 %38, i32* %3, align 4
  br label %40

39:                                               ; preds = %8
  store i32 0, i32* %3, align 4
  br label %40

40:                                               ; preds = %39, %36, %22
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local i32 @git__utf8_iterate(i32*, i32, i32*) #1

declare dso_local i32 @git__tolower(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
